# kuafu

./: .coverage  .coverage.LAPTOP-E28TL3S5.pid60623.XUAMOZpx.Hw9ux31S4Kch  .coverage.LAPTOP-E28TL3S5.pid60735.XmNJpKsx.H3Pd2ztsMZyh  .coverage.LAPTOP-E28TL3S5.pid60821.XeRu0lJx.HO0dRjJL9Xkh  .dockerignore  .env.example  .gitignore  CHANGELOG.md  CHANNEL.md  CONTRIBUTING.md  COPYRIGHT_AUDIT.md  CORE_CHARTER.md  DEVELOPER.md  Dockerfile  FIX.md  GAP_ANALYSIS.md  IDENTITY.md  LICENSE  MANIFEST.in  PLAN_desktop_v1.md  PLAN_v0.4.md  PLAN_v1.0.md  README.md  README_EN.md  SECURITY.md  TEST_CHECKLIST_v2.md  TEST_QUESTIONS.md  __init__.py  app.py  conftest.py  core_tests_to_append.py  count_lines.py  coverage.json  coverage_tests.py  docker-compose.yml  fix-eas-project.sh  gen_docx.py  hello.txt  install.sh  kuafu.sh  (+24 more)
autonomous/: README.md  __init__.py  learner.py  prioritizer.py  reviewer.py  self_health.py  skill_extractor.py  strategy_loader.py  web_learner.py
core/: __init__.py  _expert_llm_subprocess.py  agent_loop.py  agent_tree.py  agents_md.py  aggregate_search.py  approval.py  approval.py,cover  batch_engine.py  browser.py  budget_allocator.py  cli.py  compact_hooks.py  config.py  context_compress.py  cron_scheduler.py  cross_platform.py  daily_learner.py  downloader.py  episodic_memory.py  evolution.py  evolution_engine.py  evolution_rules.py  evolution_state.py  evolution_tracker.py  evolution_viz.py  exec_policy.py  expert_registry.py  feishu_bot.py  gateway.py  gepa_engine.py  hooks.py  identity.py  idle_agent.py  input_bottom.py  judge.py  kfskill.py  llm.py  local_helper.py  main.py  (+31 more)
cron/: schedule.yaml
data/: smile_output.txt
design/: incremental_evolution_v1.md
docs/: codex-architecture-reference.md  kuafu-renovation-plan-supplement.md  kuafu-renovation-plan.md
douyin/: README.md  __init__.py  cli.py  config.yaml  content_manager.py  cookie_manager.py  notifier.py  publisher.py  scheduler.py  setup.sh  skill.json
downloads/: 2d43d68666dd_1  5a255cdba62b.html  README_2.md  c4af74202dc3.html
experts/: data.yaml  finance.yaml  health.yaml  ops.yaml  quality.yaml  research.yaml  security.yaml  tech.yaml  translate.yaml  writer.yaml
kuafu-app/: 45ea2a999363.json  README_3.md  app.json  eas.json  package-lock.json  package.json
kuafu-desktop/: audit.md  build-local.bat  build.bat  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
kuafu-desktop/src-tauri/: Cargo.toml  tauri.conf.json
kuafu-desktop/src-tauri/capabilities/: default.json
kuafu-desktop/src-tauri/icons/: icon.icns
kuafu-desktop/src-tauri/src/: agent.rs  lib.rs  main.rs
logs/: skill_usage.jsonl
(+266 files in other folders)
