[package]
name = "kuafu-desktop"
version = "1.0.73"
description = "夸父 Desktop — AI Agent 桌面客户端"
authors = ["zhugezihou"]
edition = "2021"

[lib]
name = "kuafu_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = "3"
dirs = "6"
